--- a/home/home.css
+++ b/home/home.css
@@ -18,11 +18,12 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+
 }
 
 .app-container > :first-child {
     background-color: orangered;
-    width: 15%;
+    width: 19%;
 }
 
 .app-container > :last-child {
@@ -30,6 +31,22 @@ body{
     width: 80%;
 }
 
+
+.diagrams-container {
+    background-color: red;
+    position: fixed;
+    top: 0px;
+    height: 100%;
+    width: 15%;
+
+}
+
+
+.diagrams-container > .diagram {
+    background-color: peru;
+    height: 200px;
+    border: 1px solid black;
+}
 
 @media only screen and (max-width: 900px) {
     .app-container > :first-child {
@@ -39,5 +56,13 @@ body{
 
     .app-container > :last-child {
         width: 100%;
+    }
+
+    .diagrams-container {
+        
+    }
+
+    .diagrams-container > .diagram {
+        max-width: 200px;
     }
 }
