created top lever UI

--- a/home/home.css
+++ b/home/home.css
@@ -6,63 +6,55 @@ body{
 
 
 .app-title {
+    position: fixed;
     background-color: orange;
-    padding: 10px 30px;
+    padding-left: 10%;
     font-size: xx-large;
-}
+    height: 10%;
+    width: 100%;
 
+    line-height: 60px;
 
-.app-container {
-    background-color: green;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
+    z-index: 1000;
 
 }
 
-.app-container > :first-child {
-    background-color: orangered;
-    width: 19%;
-}
-
-.app-container > :last-child {
-    background-color: gray;
-    width: 80%;
-}
 
 
 .diagrams-container {
     background-color: red;
     position: fixed;
-    top: 0px;
+    top: 10%;
     height: 100%;
     width: 15%;
 
+    z-index: 1000;
+
 }
 
+.draw-container {
+    position: absolute;
+    background-color: green;
+    top: 10%;
+    left: 15%;
 
-.diagrams-container > .diagram {
-    background-color: peru;
-    height: 200px;
-    border: 1px solid black;
+    height: 100%;
+    width: 85%;
 }
+
 
 @media only screen and (max-width: 900px) {
-    .app-container > :first-child {
-        background-color: orangered;
-        width: 100%;
-    }
 
-    .app-container > :last-child {
-        width: 100%;
-    }
 
     .diagrams-container {
-        
+        height: 100px;
+        width: 100%;
     }
 
-    .diagrams-container > .diagram {
-        max-width: 200px;
+    .draw-container {
+        left: 0%;
+        top: 21%;
+        width: 100%;
     }
+
 }
