--- a/home/home.css
+++ b/home/home.css
@@ -25,12 +25,28 @@ body{
     background-color: red;
     position: fixed;
     top: 10%;
-    height: 100%;
+    height: 90%;
     width: 15%;
 
     z-index: 1000;
 
+    overflow: auto;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: flex-start;
+
 }
+
+.diagrams-container > .diagram {
+    background-color: lightseagreen;
+    height: 15%;
+    width: 100%;
+    border: 1px solid black;
+}
+
 
 .draw-container {
     position: absolute;
@@ -40,10 +56,21 @@ body{
 
     height: 100%;
     width: 85%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.draw-container > .paper {
+    background-color: gray;
+    width: 95%;
+    height: 95%;
+
 }
 
 
-@media only screen and (max-width: 900px) {
+@media screen and (min-width: 800px) and (max-width: 900px) {
 
 
     .diagrams-container {
@@ -57,4 +84,22 @@ body{
         width: 100%;
     }
 
+    .diagrams-container > .diagram {
+        height: 100%;
+        width: 15%;
+    }
+
+}
+
+@media only screen and (max-width: 800px) {
+    .diagrams-container {
+        height: 100px;
+        width: 800px;
+    }
+
+    .draw-container {
+        left: 0%;
+        top: 21%;
+        width: 800px;
+    }
 }
