--- a/home/home.css
+++ b/home/home.css
@@ -32,20 +32,28 @@ body{
 
     overflow: auto;
 
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    align-content: flex-start;
 
 }
 
-.diagrams-container > .diagram {
-    background-color: lightseagreen;
-    height: 15%;
+
+.diagrams-container > .list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+
+    height: inherit;
     width: 100%;
-    border: 1px solid black;
+
 }
+
+.diagrams-container > .list > * {
+    display: block;
+    background-color: cornflowerblue;
+    width: 100%;
+    height: 200px;
+}
+
 
 
 .draw-container {
@@ -76,6 +84,10 @@ body{
     .diagrams-container {
         height: 100px;
         width: 100%;
+
+        display: inline-block;
+
+
     }
 
     .draw-container {
@@ -84,7 +96,8 @@ body{
         width: 100%;
     }
 
-    .diagrams-container > .diagram {
+    .diagrams-container > .list > * {
+        display: inline-block;
         height: 100%;
         width: 15%;
     }
